Atualiza projeto para java 17